--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -192,10 +192,10 @@ h5 {
   font-size: 1.25rem;
 }
 a {
-  color: #bd1550;
+  color: #666666;
 }
 a:hover {
-  color: #e93675;
+  color: #ffde97;
 }
 .lead {
   font-weight: 300;
