--- a/layout.css
+++ b/layout.css
@@ -38,7 +38,7 @@
 .overview article .heading, .overview article p{margin-bottom:20px;}
 
 
---------------------------------------------------------------------------------------------------------------- */
+/*--------------------------------------------------------------------------------------------------------------- */
 *, *::before, *::after{transition:all .3s ease-in-out;}
 #mainav form *{transition:none !important;}
 
@@ -67,7 +67,7 @@
 
 
 
---------------------------------------------------------------------------------------------------------------- */
+/*--------------------------------------------------------------------------------------------------------------- */
 @media screen and (min-width:1140px){
 	.hoc{max-width:1140px;}
 }
